; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_get_value.c_menu_action_setting_disp_set_label_core_option_create.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_get_value.c_menu_action_setting_disp_set_label_core_option_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@RARCH_PATH_BASENAME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32, i32, i8*, i8*, i64, i8*, i8*, i64)* @menu_action_setting_disp_set_label_core_option_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @menu_action_setting_disp_set_label_core_option_create(i32* %0, i32* %1, i32 %2, i32 %3, i8* %4, i8* %5, i64 %6, i8* %7, i8* %8, i64 %9) #0 {
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i8*, align 8
  %17 = alloca i64, align 8
  %18 = alloca i8*, align 8
  %19 = alloca i8*, align 8
  %20 = alloca i64, align 8
  store i32* %0, i32** %11, align 8
  store i32* %1, i32** %12, align 8
  store i32 %2, i32* %13, align 4
  store i32 %3, i32* %14, align 4
  store i8* %4, i8** %15, align 8
  store i8* %5, i8** %16, align 8
  store i64 %6, i64* %17, align 8
  store i8* %7, i8** %18, align 8
  store i8* %8, i8** %19, align 8
  store i64 %9, i64* %20, align 8
  %21 = load i8*, i8** %16, align 8
  store i8 0, i8* %21, align 1
  %22 = load i32*, i32** %12, align 8
  store i32 19, i32* %22, align 4
  %23 = load i8*, i8** %16, align 8
  %24 = load i64, i64* %17, align 8
  %25 = call i32 @strlcpy(i8* %23, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i64 %24)
  %26 = load i32, i32* @RARCH_PATH_BASENAME, align 4
  %27 = call i32 @path_get(i32 %26)
  %28 = call i32 @string_is_empty(i32 %27)
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %37, label %30

30:                                               ; preds = %10
  %31 = load i8*, i8** %16, align 8
  %32 = load i32, i32* @RARCH_PATH_BASENAME, align 4
  %33 = call i32 @path_get(i32 %32)
  %34 = call i8* @path_basename(i32 %33)
  %35 = load i64, i64* %17, align 8
  %36 = call i32 @strlcpy(i8* %31, i8* %34, i64 %35)
  br label %37

37:                                               ; preds = %30, %10
  %38 = load i8*, i8** %19, align 8
  %39 = load i8*, i8** %18, align 8
  %40 = load i64, i64* %20, align 8
  %41 = call i32 @strlcpy(i8* %38, i8* %39, i64 %40)
  ret void
}

declare dso_local i32 @strlcpy(i8*, i8*, i64) #1

declare dso_local i32 @string_is_empty(i32) #1

declare dso_local i32 @path_get(i32) #1

declare dso_local i8* @path_basename(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
